# renumber

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  renumber.1.in  renumber.py  setup.cfg  setup.py  tox.ini
scripts/: extract_attr.py
test/: test_cli.py  test_doctest.py  test_hypotheses.py  test_templating.py
