[metadata]
name = renumber
author = Dylan Maltby
description = Renumber files according to template
version = attr: renumber.__version__
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
license_files = COPYING

[options]
py_modules = renumber
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    renumber = renumber:main
